test/corpus/expressions.txt
================================================================================
Operator precedence
================================================================================

package p

var x = a || b && c == d+e*f
var y = -a * ^b << 2 &^ c

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (binary_expression
          left: (identifier)
          right: (binary_expression
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (binary_expression
                left: (identifier)
                right: (binary_expression
                  left: (identifier)
                  right: (identifier)))))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (unary_expression
                operand: (identifier))
              right: (unary_expression
                operand: (identifier)))
            right: (int_literal))
          right: (identifier))))))

================================================================================
Unary operators and receive
================================================================================

package p

var a = !b
var c = &T{}
var d = *p
var e = <-ch

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (unary_expression
          operand: (identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (unary_expression
          operand: (composite_literal
            type: (type_identifier)
            value: (literal_value))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (unary_expression
          operand: (identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (unary_expression
          operand: (identifier))))))

================================================================================
Selectors, calls and indexes
================================================================================

package p

var a = x.y.z(1, 2)[3]
var b = f(xs...)
var c = make([]int, 0, 10)
var d = m["k"]

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (index_expression
          operand: (call_expression
            function: (selector_expression
              operand: (selector_expression
                operand: (identifier)
                field: (field_identifier))
              field: (field_identifier))
            arguments: (arguments
              (int_literal)
              (int_literal)))
          index: (int_literal)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (identifier)
          arguments: (arguments
            (slice_type
              element: (type_identifier))
            (int_literal)
            (int_literal))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (index_expression
          operand: (identifier)
          index: (interpreted_string_literal
            (string_content)))))))

================================================================================
Generic instantiation
================================================================================

package p

var a = Map[int, string](xs, f)
var b = Sum[float64]
var c = Pair[x.T, []int, *p.U, V[int]]{}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (index_expression
            operand: (identifier)
            index: (identifier)
            index: (type_identifier))
          arguments: (arguments
            (identifier)
            (identifier))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (index_expression
          operand: (identifier)
          index: (identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (generic_type
            type: (type_identifier)
            type_arguments: (type_arguments
              (qualified_identifier
                package: (package_identifier)
                name: (type_identifier))
              (slice_type
                element: (type_identifier))
              (pointer_type
                (qualified_identifier
                  package: (package_identifier)
                  name: (type_identifier)))
              (generic_type
                type: (type_identifier)
                type_arguments: (type_arguments
                  (type_identifier)))))
          value: (literal_value))))))

================================================================================
Slice expressions
================================================================================

package p

var a = s[1:2]
var b = s[:]
var c = s[1:2:3]
var d = s[:n:n]

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (slice_expression
          operand: (identifier)
          low: (int_literal)
          high: (int_literal)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (slice_expression
          operand: (identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (slice_expression
          operand: (identifier)
          low: (int_literal)
          high: (int_literal)
          max: (int_literal)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (slice_expression
          operand: (identifier)
          high: (identifier)
          max: (identifier))))))

================================================================================
Type assertions and conversions
================================================================================

package p

var a = x.(io.Reader)
var b = (*T)(p)
var c = []byte("s")
var d = (<-chan int)(ch)
var e = func() int(f)

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (type_assertion_expression
          operand: (identifier)
          type: (qualified_identifier
            package: (package_identifier)
            name: (type_identifier))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (parenthesized_expression
            (unary_expression
              operand: (identifier)))
          arguments: (arguments
            (identifier))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (slice_type
            element: (type_identifier))
          arguments: (arguments
            (interpreted_string_literal
              (string_content)))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (parenthesized_expression
            (channel_type
              element: (type_identifier)))
          arguments: (arguments
            (identifier))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (function_type
            parameters: (parameters)
            result: (type_identifier))
          arguments: (arguments
            (identifier)))))))

================================================================================
Composite literals
================================================================================

package p

var a = Point{X: 1, Y: 2}
var b = []Point{{1, 2}, {3, 4}}
var c = map[string]int{"a": 1}
var d = [...]int{1, 2, 3}
var e = struct{ A int }{A: 1}
var f = &pkg.T[int]{}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (type_identifier)
          value: (literal_value
            (keyed_element
              key: (identifier)
              element: (int_literal))
            (keyed_element
              key: (identifier)
              element: (int_literal)))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (slice_type
            element: (type_identifier))
          value: (literal_value
            (literal_value
              (int_literal)
              (int_literal))
            (literal_value
              (int_literal)
              (int_literal)))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (map_type
            key: (type_identifier)
            element: (type_identifier))
          value: (literal_value
            (keyed_element
              key: (interpreted_string_literal
                (string_content))
              element: (int_literal)))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (implicit_length_array_type
            element: (type_identifier))
          value: (literal_value
            (int_literal)
            (int_literal)
            (int_literal))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (struct_type
            (field_declaration
              name: (field_identifier)
              type: (type_identifier)))
          value: (literal_value
            (keyed_element
              key: (identifier)
              element: (int_literal)))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (unary_expression
          operand: (composite_literal
            type: (generic_type
              type: (qualified_identifier
                package: (package_identifier)
                name: (type_identifier))
              type_arguments: (type_arguments
                (type_identifier)))
            value: (literal_value)))))))

================================================================================
Struct literal keys that name promoted fields
================================================================================

package p

var line = Line{name: "diagonal", q: Point3D{1, 1, 1}}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (composite_literal
          type: (type_identifier)
          value: (literal_value
            (keyed_element
              key: (identifier)
              element: (interpreted_string_literal
                (string_content)))
            (keyed_element
              key: (identifier)
              element: (composite_literal
                type: (type_identifier)
                value: (literal_value
                  (int_literal)
                  (int_literal)
                  (int_literal))))))))))

================================================================================
Function literals
================================================================================

package p

var f = func(x int) int { return x * 2 }
var g = func() {}()

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (function_literal
          parameters: (parameters
            (parameter_declaration
              name: (identifier)
              type: (type_identifier)))
          result: (type_identifier)
          body: (block
            (return_statement
              result: (expression_list
                (binary_expression
                  left: (identifier)
                  right: (int_literal)))))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (function_literal
            parameters: (parameters)
            body: (block))
          arguments: (arguments))))))

================================================================================
Method expressions
================================================================================

package p

var a = (*T).Method
var b = T.Method
var c = struct{ A }.m

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (selector_expression
          operand: (parenthesized_expression
            (unary_expression
              operand: (identifier)))
          field: (field_identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (selector_expression
          operand: (identifier)
          field: (field_identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (selector_expression
          operand: (struct_type
            (field_declaration
              type: (type_identifier)))
          field: (field_identifier))))))

================================================================================
Unary operators after a space do not join the operator before them
================================================================================

package p

var x = a - -b + +c & ^d && &e

func f() {
	a + b++
	ch <- -1
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (unary_expression
                operand: (identifier)))
            right: (binary_expression
              left: (unary_expression
                operand: (identifier))
              right: (unary_expression
                operand: (identifier))))
          right: (unary_expression
            operand: (identifier))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (inc_dec_statement
        operand: (binary_expression
          left: (identifier)
          right: (identifier)))
      (send_statement
        channel: (identifier)
        value: (unary_expression
          operand: (int_literal))))))

================================================================================
A tilde operand after the first token of a statement
================================================================================

package p

func f() {
	x = ~y
	if ~x {
	}
	for ~x {
	}
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    body: (block
      (assignment
        left: (expression_list
          (identifier))
        right: (expression_list
          (unary_expression
            operand: (identifier))))
      (if_statement
        condition: (unary_expression
          operand: (identifier))
        body: (block))
      (for_statement
        condition: (unary_expression
          operand: (identifier))
        body: (block)))))

================================================================================
A selector on a literal after a space
================================================================================

package p

var a = 0x1 .f
var b = 0x1p-2.f
var c = 1.5.f

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (selector_expression
          operand: (int_literal)
          field: (field_identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (selector_expression
          operand: (float_literal)
          field: (field_identifier)))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (selector_expression
          operand: (float_literal)
          field: (field_identifier))))))

================================================================================
The new builtin with an expression operand
================================================================================

package p

var p = new(int)
var q = new(yearsSince(born))

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (package_identifier))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (identifier)
          arguments: (arguments
            (identifier))))))
  (var_declaration
    (var_spec
      name: (identifier)
      value: (expression_list
        (call_expression
          function: (identifier)
          arguments: (arguments
            (call_expression
              function: (identifier)
              arguments: (arguments
                (identifier)))))))))
